# research-notes

./: .gitignore  README.md  pyproject.toml
experiments/: run_advanced_jpeg_syntax.py  run_color_metadata_interpretation.py  run_cross_platform_codec_contracts.py  run_focus_metric_comparison.py  run_jpeg_codec_portability.py  run_jpeg_compression_history.py  run_laplacian_variance.py  run_local_blur_evaluation.py  run_optical_blur_models.py  run_photometric_recompression.py  run_preprocessing_sensitivity.py  run_window_geometry_evaluation.py  summarize_advanced_jpeg_syntax.py  summarize_color_metadata_contracts.py  summarize_cross_platform_codec_contracts.py
notes/: color-management-ycck-metadata-interpretation.md  cross-platform-codec-builds-decoded-pixel-contracts.md  independent-codec-families-advanced-jpeg-syntax.md  jpeg-compression-history.md  jpeg-quantization-codec-portability.md  laplacian-variance-blur.md  laplacian-vs-tenengrad.md  local-blur-spatial-aggregation.md  optical-blur-models-directional-motion.md  photometric-normalization-recompression-drift.md  preprocessing-sensitivity-calibration-drift.md  window-geometry-robustness.md
results/: README.md  focus_metric_summary.csv  focus_metric_trials.csv  jpeg_advanced_codec_manifest.csv  jpeg_advanced_cross_platform_codec_manifest.csv  jpeg_advanced_cross_platform_observations.csv  jpeg_advanced_cross_platform_pair_summary.csv  jpeg_advanced_cross_platform_pairs.csv  jpeg_advanced_cross_platform_summary.csv  jpeg_advanced_cross_platform_syntax_equivalence.csv  jpeg_advanced_decoder_observations.csv  (+55 more)
(+13 files in other folders)
